Version 1.18.4
==================
- fixed incomplete search results when searching in `This Project`
- fixed incomplete selection in LST file when using the scroll action
- fixed wrong behavior on overwriting a file loaded via the welcome page or the model library
- fixed incorrect handling of some message box decisions due to a Qt change
- fixed explicit solver name not recognized by NEOS
- upgraded to Qt 6.7.2

Version 1.18.3
==================
- added support for new GAMS license file format with 8 lines
- added missing context menu actions for folder entries in projects
- added `--skip-check-for-update` to skip all online `check for update` actions
- fixed scrolling with page up/down doesn't work in process log
- fixed base directory line input too long in project edit
- fixed cut off text in NEOS dialog
- fixed activation of parameter search filter in GAMS Configuration editor
- fixed suffix issue for opt files on Windows

Version 1.18.2
==================
- added transition page after the GAMS Engine login
- fixed update issues during color changes when the Settings dialog is open
- fixed crash when searching in folder
- fixed switch back to login when GAMS Engine session is expired
- fixed continue resume when GAMS Engine session is expired
- fixed visual issues on the welcome page
- fixed the min-size restriction that broke the "Getting started" column of the welcome page
- fixed crash and load behavior of reference viewer when reference file is partially or incorrectly written
- fixed GAMS Engine crash when downloading large result data

Version 1.18.1
==================
- fixed crash when running GAMS Engine without efi-file
- fixed double-click word selection, wrong selection when scrolling, wrong selection anchor
- fixed palette issues in process log view, e.g. while text on white background for text selections
- fixed find in project processes only open files
- fixed find in project also processed excluded files, like gdx and zip

Version 1.18.0